--- a/heckman.bib
+++ b/heckman.bib
@@ -1,42 +1,47 @@
 % This file was created with JabRef 2.10.
 % Encoding: Cp1252
 
-
-%%%%% SEND TO TYPISTS
-
-@article{slot2015associations,
-  title={Associations between structural quality aspects and process quality in Dutch early childhood education and care settings},
-  author={Slot, Pauline L and Leseman, Paul PM and Verhagen, Josje and Mulder, Hanna},
-  journal={Early Childhood Research Quarterly},
-  volume={33},
-  pages={64--76},
+@article{geyer2015effects,
+  title={The effects of family policy on maternal labor supply: Combining evidence from a structural model and a quasi-experimental approach},
+  author={Geyer, Johannes and Haan, Peter and Wrohlich, Katharina},
+  journal={Labour Economics},
+  volume={36},
+  pages={84--98},
   year={2015},
   publisher={Elsevier}
 }
 
-@article{phillipsen1997prediction,
-  title={The prediction of process quality from structural features of child care},
-  author={Phillipsen, Leslie C and Burchinal, Margaret R and Howes, Carollee and Cryer, Debby},
-  journal={Early childhood research quarterly},
-  volume={12},
-  number={3},
-  pages={281--303},
-  year={1997},
+@article{bettendorf2015childcare,
+  title={Childcare subsidies and labour supply—Evidence from a large Dutch reform},
+  author={Bettendorf, Leon JH and Jongen, Egbert LW and Muller, Paul},
+  journal={Labour Economics},
+  volume={36},
+  pages={112--123},
+  year={2015},
   publisher={Elsevier}
 }
 
-@article{thomason2009measuring,
-  title={Measuring the quality of teacher--child interactions in toddler child care},
-  author={Thomason, Amy C and La Paro, Karen M},
-  journal={Early Education and Development},
-  volume={20},
-  number={2},
-  pages={285--304},
-  year={2009},
-  publisher={Taylor \& Francis}
+@article{brilli2016does,
+  title={Does child care availability play a role in maternal employment and children’s development? Evidence from Italy},
+  author={Brilli, Ylenia and Del Boca, Daniela and Pronzato, Chiara D},
+  journal={Review of Economics of the Household},
+  volume={14},
+  number={1},
+  pages={27--51},
+  year={2016},
+  publisher={Springer}
 }
 
-%%%%%%
+
+@article{bauernschuster2015public,
+  title={Public child care and mothers' labor supply—Evidence from two quasi-experiments},
+  author={Bauernschuster, Stefan and Schlotter, Martin},
+  journal={Journal of Public Economics},
+  volume={123},
+  pages={1--16},
+  year={2015},
+  publisher={Elsevier}
+}
 
 
 @TechReport{dHaultfoeuille_CompCondition,
@@ -27960,6 +27965,19 @@ Welfare Reform Academy},
   Timestamp                = {2016.03.01}
 }
 
+@Article{Feller_1943_AMS,
+  Title                    = {On a General Class of ``Contagious'' Distributions},
+  Author                   = {Feller, William},
+  Journal                  = {The Annals of Mathematical Statistics},
+  Year                     = {1943},
+  Number                   = {4},
+  Pages                    = {389--400},
+  Volume                   = {14},
+
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2018.04.30}
+}
+
 @Article{Felsenfeld-etal_2000_BG,
   Title                    = {A Study of the Genetic and Environmental Etiology of Stuttering in a Selected Twin Sample},
   Author                   = {Felsenfeld, Susan and Kirk, Katherine M. and Zhu, Ghu and Statham, Dixie J. and Neale, Michael C. and Martin, Nicholas G.},
@@ -28332,6 +28350,19 @@ Welfare Reform Academy},
 
   Owner                    = {Andrew},
   Timestamp                = {2015.10.02}
+}
+
+@Article{Finkelstein_etal_2012_Oregon_QJE,
+  Title                    = {The {O}regon Health Insurance Experiment: Evidence from the First Year},
+  Author                   = {Finkelstein, Amy and Taubman, Sarah and Wright, Bill and Bernstein, Mira and Gruber, Jonathan and Newhouse, Joseph P. and Allen, Heidi and Baicker, Katherine, and {Oregon Health Study Group}},
+  Journal                  = {The Quarterly Journal of Economics},
+  Year                     = {2012},
+  Number                   = {3},
+  Pages                    = {1057--1106},
+  Volume                   = {127},
+
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2018.05.03}
 }
 
 @Article{Finkelstein_1982_Day_Care_YC,
@@ -60169,6 +60200,18 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Timestamp                = {2018.02.01}
 }
 
+@Article{Moffitt_2018_NHB,
+  Title                    = {Male Antisocial Behaviour in Adolescence and Beyond},
+  Author                   = {Moffitt, Terrie E.},
+  Journal                  = {Nature Human Behaviour},
+  Year                     = {2018},
+  Pages                    = {177--186},
+  Volume                   = {2},
+
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2018.04.30}
+}
+
 @Unpublished{Moffitt_2008_GeneEnvironmentInteraction,
   Title                    = {Gene-Environment Interaction in Problematic and Successful Aging},
   Author                   = {Moffitt, Terrie E.},
@@ -61842,6 +61885,18 @@ Robinson, Lara Rachel},
   Address                  = {Washington, DC},
 
   Timestamp                = {2008.05.09}
+}
+
+@TechReport{NCES_2017_Education_IES,
+  Title                    = {{The Condition of Education 2017}},
+  Author                   = {{National Center for Education Statistics}},
+  Institution              = {{Institute of Education Sciences}},
+  Year                     = {2017},
+  Number                   = {Chapter 2: Preschool and Kindergarten Enrollment},
+  Type                     = {Compendium},
+
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2018.05.03}
 }
 
 @TechReport{UDOE_2016_Statistics_Report,
@@ -66400,6 +66455,19 @@ Robinson, Lara Rachel},
   Address                  = {Washington, DC},
   Editor                   = {C. Jencks and M. Phillips},
   Pages                    = {401--427}
+}
+
+@Article{Phillipsen_etal_1997_ECRQ,
+  Title                    = {The Prediction of Process Quality from Structural Features of Child Care},
+  Author                   = {Phillipsen, Leslie C. and Burchinal, Margaret R. and Howes, Carollee and Cryer, Debby},
+  Journal                  = {Early Childhood Research Quarterly},
+  Year                     = {1997},
+  Number                   = {3},
+  Pages                    = {281--303},
+  Volume                   = {12},
+
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2018.05.03}
 }
 
 @Book{Piaget_1981_BOOKIntelligenceAff,
@@ -75860,6 +75928,19 @@ Robinson, Lara Rachel},
   Timestamp                = {2011.07.17}
 }
 
+@Article{Slot_etal_2015_Dutch_ECRQ,
+  Title                    = {Associations Between Structural Quality Aspects and Process Quality in {D}utch Early Childhood Education and Care Settings},
+  Author                   = {Slot, Pauline L. and Leseman, Paul P.M. and Verhagen, Josje and Mulder, Hanna},
+  Journal                  = {Early Childhood Research Quarterly},
+  Year                     = {2015},
+  Number                   = {4th Quarter},
+  Pages                    = {64--76},
+  Volume                   = {33},
+
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2018.05.03}
+}
+
 @Article{Slovic_1972_TJoF,
   Title                    = {Psychological study of human judgment: Implications for investment decision making},
   Author                   = {Slovic, Paul},
@@ -79791,6 +79872,19 @@ Robinson, Lara Rachel},
   Doi                      = {10.2307/145670},
   Owner                    = {Jessica Dyer},
   Timestamp                = {2016.03.02}
+}
+
+@Article{Thomason_LaParo_2009_EED,
+  Title                    = {Measuring the Quality of TeacherñChild Interactions in Toddler Child Care},
+  Author                   = {Thomason, Amy C. and La Paro, Karen M.},
+  Journal                  = {Early Education and Development},
+  Year                     = {2009},
+  Number                   = {2},
+  Pages                    = {285--304},
+  Volume                   = {20},
+
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2018.05.03}
 }
 
 @Book{Thompson_2004_BOOKfactoranalysis,
