--- a/sections/0_abstract.tex
+++ b/sections/0_abstract.tex
@@ -1,1 +1,1 @@
-\noindent This paper estimates gender differences in life-cycle impacts across multiple domains of an influential enriched early childhood program targeted toward disadvantaged children that was evaluated by the method of random assignment. We assess the impacts of the program on promoting or alleviating population differences in outcomes by gender. For many outcomes, boys benefit relatively more from high-quality center childcare programs compared to lower-quality programs. For them, home care, even in disadvantaged environments, is more beneficial than lower-quality center childcare for many outcomes. This phenomenon is not found for girls. We discuss potential sources of gender differentials in impacts. 
+\noindent This paper documents gender differences in life-cycle impacts across multiple domains of an influential enriched early childhood program targeted toward disadvantaged children that was evaluated by the method of random assignment. We assess the impacts of the program on promoting or alleviating population differences in outcomes by gender. For many outcomes, boys benefit more from high-quality center childcare programs compared to lower-quality programs. For them, home care, even in disadvantaged environments, is more beneficial than lower-quality center childcare for many outcomes. This phenomenon is not found for girls. We discuss potential sources of gender differentials in impacts. 
