--- a/sections/1_introduction.tex
+++ b/sections/1_introduction.tex
@@ -1,22 +1,24 @@
 Differences in gender are central features of economic and social life. This paper investigates how participation in enriched early childhood programs differentially affects the lives of disadvantaged boys and girls, and whether it promotes or reduces gender gaps. In addition, we study the effect of these gender gaps considering different levels of quality. We show that, on many outcomes, boys are more susceptible to lower-quality alternatives to enriched early childhood education, which contributes to the observed reversals in boy-girl gender gaps. 
 
-Many studies across disciplines point to the greater vulnerability of boys to adverse life conditions from a combination of psychological, biological, and social factors.\footnote{See \citet{Golding_Fitzgerald_2017_IMHJ} for a review of recent work.} As a group, girls mature earlier, are more resilient to adversity, and perform better in a variety of life tasks. See \citet{Eliot_Brain_2009_BOOK,Schore_2017_IMHJ} for an informative overview of this literature. Economists have also contributed to this literature. See, e.g., \citet{Bertrand_Pan_2013_AEJAE}, \citet{Kottelenberg_Lehrer_2014_Gender-Effects}, and \citet{Autor-etal_2015_Family-Disadvantage}. These studies support the hypothesis that early deficits in boys compound during skill formation resulting in large differences between later male and female outcomes. Less is known about effective strategies for reducing or compensating for the vulnerability of boys to disadvantage.
+The current consensus among studies across disciplines points to the greater vulnerability of boys to adverse life conditions from a combination of psychological, biological, and social factors.\footnote{See \citet{Golding_Fitzgerald_2017_IMHJ} for a review of recent work.} As a group, girls mature earlier, are more resilient to adversity, and perform better in a variety of life tasks. See \citet{Eliot_Brain_2009_BOOK} and \citet{Schore_2017_IMHJ} for an informative overview of this literature. Economists, such as \citet{Bertrand_Pan_2013_AEJAE}, \citet{Kottelenberg_Lehrer_2014_Gender-Effects}, and \citet{Autor-etal_2015_Family-Disadvantage}, have also contributed to this literature. These studies support the hypothesis that early deficits in boys compound during skill formation resulting in large differences between later male and female outcomes. Less is known about effective strategies for reducing or compensating for the vulnerability of boys to disadvantage.
 
-Many studies have shown the benefits of early-life interventions for improving the skills of children, especially those from disadvantaged families \citep{Currie_2011_AER,Elango_Hojman_etal_2016_Early-Edu}. Although several of these studies report effects by gender, most do not. Some examples include \citet{Bernal_Keane_2011_JoLE,Cascio_Schanzenbach_2013_ImpactsExpandingAccess,Bitler_et_al_2014_Head_Start_Unpublished,Kline_Walters_2016_QJE}. There are some exceptions \citep{Anderson_2008_JASA,Heckman_Moon_etal_2010_QE,Campbell_Conti_etal_2014_EarlyChildhoodInvestments,Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}.\footnote{Although \citet{Anderson_2008_JASA} provides estimates of factors for ABC that combine many outcomes into a condensed summary measure, the data he uses is not current with important health, survey, and administrative data being collected from the ABC sample after age 21 result in different trends than what he reports. The most glaring example of this is crime outcomes, whose treatment effects are not significant until after age 21 in ABC.} These studies generally find that men benefit more in health and employment outcomes while women benefit more in education outcomes. This paper finds similar results, but presents novel analysis comparing alternative care settings by gender. Pooling males and females ignores potentially large differences in treatment effects.\footnote{We survey the literature more extensively in Appendix~\ref{appendix:gdiff-survey}.} 
+Much work has been done to document the benefits of early-life interventions for improving the skills of children, especially those from disadvantaged families \citep{Currie_2011_AER,Elango_Hojman_etal_2016_Early-Edu}. Although several of these studies report effects by gender, most do not. Some examples include \citet{Bernal_Keane_2011_JoLE}, \citet{Cascio_Schanzenbach_2013_ImpactsExpandingAccess}, \citet{Bitler_et_al_2014_Head_Start_Unpublished}, and \citet{Kline_Walters_2016_QJE}. There are some exceptions \citep{Anderson_2008_JASA,Heckman_Moon_etal_2010_QE,Campbell_Conti_etal_2014_EarlyChildhoodInvestments,Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}.\footnote{Although \citet{Anderson_2008_JASA} provides estimates of factors for the Carolina Abecedarian Project (ABC) that combine many outcomes into a condensed summary measure, the data he uses are not current with important health, survey, and administrative data collected from the ABC sample after age 21, resulting in different trends than what he reports. The most glaring example of this is crime outcomes, whose treatment effects are not significant until after age 21 in ABC.} These studies generally find that men benefit more in health and employment outcomes while women benefit more in education outcomes. This paper finds similar results, but presents novel analysis comparing alternative care settings by gender.\footnote{We survey the literature on gender differences more extensively in Appendix~\ref{appendix:gdiff-survey}.} 
 
-This paper investigates this issue using data from a randomized controlled trial of a prototypical intensive early childhood program that enriched the early lives of disadvantaged children. The data come from the Carolina Abecedarian Project (ABC) and its almost identical sister program, the Carolina Approach to Responsive Education (CARE). These programs were conducted in Chapel Hill, North Carolina for a sample of children born between 1972 and 1980. In this paper, we refer to the combined programs by the acronym ABC/CARE. It was one of the pioneer programs that focused intensively on child-led learning and is a template for many current and proposed early interventions.\footnote{Programs inspired by ABC/CARE have been (and are currently being) launched around the world. \citet{Sparling_2010_Highlights} and \citet{Ramey_Ramey_Lanzi_2014_Interventions} list numerous programs based on the ABC/CARE approach. The programs are: IHDP---eight different cities around the U.S. \citep{Spiker-etal_1997_Helping}; Early Head Start and Head Start in the U.S. \citep{Schneider_McDonald-eds_2007_Scale-Up_Vol-1}; John's Hopkins Cerebral Palsy Study in the U.S. \citep{Sparling_2010_Highlights}; Classroom Literacy Interventions and Outcomes (CLIO) study in the U.S. \citep{Sparling_2010_Highlights}; Massachusetts Family Child Care Study \citep{Collins_etal_2010_Massachusetts-Study}; Healthy Child Manitoba Evaluation \citep{Healthy_Child_Manitoba_2015_Starting-Early}; Abecedarian Approach within an Innovative Implementation Framework \citep{Jensen_Nielsen_2016_ABC-Programme-Pilot}; and Building a Bridge into Preschool in Remote Northern Territory Communities in Australia \citep{UMonash_Dataset_2015_URL}. Educare programs are also based on ABC/CARE \citep{Educare_2014_Research_Agenda,Yazejian_Bryant_2012_Educare}.} It started at 8 weeks of age and continued through age 5. Treatment and control subjects were followed through their mid 30s, with data collected on multiple dimensions of human development \citep{Ramey_Campbell_1991_childreninpoverty}. 
+This paper investigates this issue using data from a randomized controlled trial of an influential intensive early childhood program that enriched the early lives of disadvantaged children. The data come from the Carolina Abecedarian Project (ABC) and its almost identical sister program, the Carolina Approach to Responsive Education (CARE). These programs were conducted in Chapel Hill, North Carolina for a sample of children born between 1972 and 1980. In this paper, we refer to the combined programs by the acronym ABC/CARE. It was one of the pioneer programs that focused intensively on child-led learning and is a template for many current and proposed early interventions.\footnote{Programs inspired by ABC/CARE have been (and are currently being) launched around the world. \citet{Sparling_2010_Highlights} and \citet{Ramey_Ramey_Lanzi_2014_Interventions} list numerous programs based on the ABC/CARE approach. The programs are: IHDP---eight different cities around the U.S. \citep{Spiker-etal_1997_Helping}; Early Head Start and Head Start in the U.S. \citep{Schneider_McDonald-eds_2007_Scale-Up_Vol-1}; John's Hopkins Cerebral Palsy Study in the U.S. \citep{Sparling_2010_Highlights}; Classroom Literacy Interventions and Outcomes (CLIO) study in the U.S. \citep{Sparling_2010_Highlights}; Massachusetts Family Child Care Study \citep{Collins_etal_2010_Massachusetts-Study}; Healthy Child Manitoba Evaluation \citep{Healthy_Child_Manitoba_2015_Starting-Early}; Abecedarian Approach within an Innovative Implementation Framework \citep{Jensen_Nielsen_2016_ABC-Programme-Pilot}; and Building a Bridge into Preschool in Remote Northern Territory Communities in Australia \citep{UMonash_Dataset_2015_URL}. Educare programs are also based on ABC/CARE \citep{Educare_2014_Research_Agenda,Yazejian_Bryant_2012_Educare}.} It started at 8 weeks of age and continued through age 5. Treatment and control subjects were followed through their mid 30s, with data collected on multiple dimensions of human development \citep{Ramey_Campbell_1991_childreninpoverty}. 
 
-There are positive impacts of the program across the life cycle for both genders.\footnote{Previous studies presenting treatment effects of ABC and CARE include \citet{Ramey_etal_1985_Project-CARE_TiECSE,Clarke_Campbell_1998_ABC_Comparison_ECRQ,Campbell_Pungello_etal_2001_DP,Campbell_Ramey_etal_2002_ADS,Campbell_Wasik_etal_2008_ECRQ,Campbell_Conti_etal_2014_EarlyChildhoodInvestments}. Only \citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} divide the treatment effects by gender, however, to focus on the health effects, with men having much more positive effects especially in cardiovascular and metabolic conditions. This is consistent with the results we report below.} However, there are substantial differences in impacts by gender across domains. The program promotes the labor income, employment, and health of males and reduces their participation in crime, while it enhances the cognition, achievement, and educational attainment of girls. While all the treatment-group subjects attended the center-based care, the experiences of the control-group subjects varied with 75\% enrolling in alternative center-based options. Historical documentation, records, and evidence from knowledgeable individuals indicate that although the available alternative centers followed state and federal standards, they were of considerably lower quality than the ABC/CARE program.\footnote{We document this in Appendix~\ref{app:control-subbb}.} We analyze the marginal benefit of ABC/CARE relative to this lower-quality center-based care. Boys in ABC/CARE benefit relatively more than girls from participation in high-quality center-based care compared to lower-quality center-based care.
+There are positive impacts of the program across the life cycle for both genders.\footnote{Previous studies presenting treatment effects of ABC and CARE include \citet{Ramey_etal_1985_Project-CARE_TiECSE,Clarke_Campbell_1998_ABC_Comparison_ECRQ,Campbell_Pungello_etal_2001_DP,Campbell_Ramey_etal_2002_ADS,Campbell_Wasik_etal_2008_ECRQ,Campbell_Conti_etal_2014_EarlyChildhoodInvestments}. Only \citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} divide the treatment effects by gender, however, to focus on the health effects, with men having many more positive effects especially in cardiovascular and metabolic conditions. This is consistent with the results we report below.} However, there are substantial differences in impacts by gender across domains. The program promotes the labor income, employment, and health of males and reduces their participation in crime, while it enhances the cognition, achievement, and educational attainment of girls. While all the treatment-group subjects attended the center-based care, the experiences of the control-group subjects varied with 75\% enrolling in alternative center-based options. Historical documentation, records, and evidence from knowledgeable individuals indicate that although the available alternative centers mostly followed state and federal standards, they were of considerably lower quality than the ABC/CARE program.\footnote{We document this in Section~\ref{sec:data} and Appendix~\ref{app:control-subbb}.} We analyze the marginal benefit of ABC/CARE relative to this lower-quality center-based care accouting for selection into the alternatives using matching on observables. Boys in ABC/CARE benefit relatively more than girls from participation in high-quality center-based care compared to lower-quality center-based care.
 
-Our analysis responds to recent claims about the harm caused by enrolling children in center-based infant care and preschool. In an influential analysis, \citet{Baker_Gruber_etal_2008_JPE} show that participants in childcare manifest adverse behavioral outcomes. \citet{Kottelenberg_Lehrer_2014_Gender-Effects} find a similar result but localized to boys.  The program analyzed by \citet{Baker_Gruber_Milligan_2015_Noncog_Defects} and \citet{Kottelenberg_Lehrer_2014_Gender-Effects} is of relatively low quality compared to the enriched program we analyze.\footnote{The program they analyze was a modest payment (between 5 and 7 Canadian dollars a day starting in 1997) in the form of a voucher. The voucher component itself implies a reduction in the quality of the received program given an information problem by parents. The full cost of the program was \$44 (2014) a day \citep{Baker_etal_2005_Universal_Childcare_NBER}. This is less than two thirds of the cost of ABC/CARE, which was close to \$75 (2014) a day \citep{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}.} However, not all childcare programs are alike. We produce evidence that high-quality childcare greatly benefits boys relative to lower-quality childcare. Staying at home is a better option for them. This effect is not found for girls. There is no contradiction between the claim that lower-quality programs impair child development, while high-quality programs do not. This analysis sounds a cautionary note for advocates of early childcare in any form: quality matters and low-quality programs can cause harm. It also helps further the results to a modern context in which many more children are enrolled in preschool programs: in 2016, an estimated 42\% of 3-year-olds, 66\% of 4-year-olds, and 86\% of 5-year-olds were enrolled in preschool programs.
+Our analysis responds to recent claims about the harm caused by enrolling children in center-based infant care and preschool. In an influential analysis, \citet{Baker_Gruber_etal_2008_JPE} show that participants in childcare manifest adverse behavioral outcomes. \citet{Kottelenberg_Lehrer_2014_Gender-Effects} find a similar result but localized to boys.  The program analyzed by \citet{Baker_Gruber_Milligan_2015_Noncog_Defects} and \citet{Kottelenberg_Lehrer_2014_Gender-Effects} is of relatively low quality compared to the enriched program we analyze.\footnote{The program they analyze was a modest payment (between 5 and 7 Canadian dollars a day starting in 1997) in the form of a voucher. The voucher component itself implies a reduction in the quality of the received program given an information problem by parents. The full cost of the program was \$44 (2014) a day \citep{Baker_etal_2005_Universal_Childcare_NBER}. This is less than two thirds of the cost of ABC/CARE, which was close to \$75 (2014) a day \citep{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}.}  
 
-Unlike previous studies, we estimate treatment effects comparing the treatment group to different control groups: subjects who received home care or care in centers of lower quality then ABC/CARE. Other papers study early childhood education comparing the treatment group to alternative options. An example includes \citet{Feller_Grindal_etal_2016_ComparedtoWhat,Kline_Walters_2016_QJE}, both of which analyze Head Start using the multi-site randomized Head Start Impact Study (HSIS). Both find that Head Start was more compared to children who did not enroll in alternative programs. Part of the explanation for this is that many control-group subjects in HSIS actually enrolled in other Head Start programs. They do not present separate effects by gender. 
+Randomization allows us to identify the parameter for the effect of the program, but we need further assumptions to be able to identify the parameters comparing to alternative settings of differing levels of quality. Given these assumptions, we produce evidence that high-quality childcare greatly benefits boys relative to lower-quality childcare. This effect is not found for girls for most outcomes. There is no contradiction between the claim that lower-quality programs impair child development, while high-quality programs do not. This analysis sounds a cautionary note for advocates of early childcare in any form: quality matters and low-quality programs can cause harm. Dissecting the counterfactual further helps bring the results to a modern context in which many more children are enrolled in preschool programs: in 2016, an estimated 42\% of 3-year-olds, 66\% of 4-year-olds, and 86\% of 5-year-olds were enrolled in preschool programs \citep{NCES_2017_Education_IES}.
 
-These studies' primary analyses use an instrumental approach or stratification. In a small and largely homogenous sample like ABC/CARE, this type of analysis is less credible.\footnote{In Appendix~\ref{appendix:amethodology}, we present estimates instrumenting for selection into alternative preschool. We present various specifications and compare the results to the intent-to-treat estimates. The IV estimates are much larger, but less precise.} Using matching methods, we are able to communicate estimates of the treatment effects of ABC/CARE relative to the relevant counterfactuals. Under certain assumptions, these estimates can be treated causally, although we qualify that the inference of these estimates is not exactly comparable to analyzing the treatment group in comparison to the full control group. With those qualifications, we find that home care is beneficial for boys compared to low-quality center childcare. 
+Other papers study early childhood education comparing the treatment group to different alternative options. Examples include \citet{Feller_Grindal_etal_2016_ComparedtoWhat} and \citet{Kline_Walters_2016_QJE}, both of which analyze Head Start using the multi-site randomized Head Start Impact Study (HSIS). Both find that Head Start was more effective compared to children who did not enroll in alternative programs. Part of the explanation for this is that many control-group subjects in HSIS actually enrolled in other Head Start programs. They do not present separate effects by gender. 
+
+These studies' primary analyses use an instrumental variable approach or stratification. In a small and homogenous sample like ABC/CARE, this type of analysis is less credible.\footnote{In Appendix~\ref{appendix:amethodology}, we present estimates instrumenting for selection into alternative preschool. We present various specifications and compare the results to the intent-to-treat estimates. The IV estimates are much larger, but less precise.} Using matching methods, we are able to communicate estimates of the treatment effects of ABC/CARE relative to the relevant counterfactuals. Under certain assumptions, these estimates can be treated causally, although we qualify that the inference of these estimates is not exactly comparable to analyzing the treatment group in comparison to the full control group. With those qualifications, we find that home care is beneficial for boys compared to low-quality center childcare. 
 
 To preview our analysis, we present effect sizes by gender in Table~\ref{tab:stdte}. We report the standardized treatment effect averaged across variables within an outcome category (we have multiple outcome measures in each category which we explain in greater detail below) separately for men and women. Across the variables in each category, we compare the distribution of effect sizes for men with that for women. To test this comparison, we use a Wilcoxon rank sum test to non-parametrically compare the distribution of standardized treatment effects.
 
-Across genders, the largest effect sizes appear for outcomes in IQ, achievement, crime, education, employment, and mental health. The effect sizes are significantly larger for women in achievement, crime, mental health, and across all outcomes. A companion paper, \citet{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}, provides a cost-benefit analysis of ABC/CARE, which provides a monetized analogue these standardized treatment effects. While treatment effects tend to be more positive for females than for males, the outcomes in which men are more affected are also costlier, resulting in a larger rate of return for men relative to women.
+Across genders, the largest effect sizes appear for outcomes in IQ, achievement, crime, education, employment, and mental health. The effect sizes are significantly larger for women in achievement, crime, mental health, and across all outcomes. In this paper, we propose another approach to aggregating treatment effects to help compare the gender effects. A companion paper, \citet{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}, provides a cost-benefit analysis of ABC/CARE, which provides a monetized analogue these standardized treatment effects. While treatment effects tend to be more positive for females than for males, the outcomes in which men are more affected are also costlier, resulting in a larger rate of return for men relative to women. 
 
 \begin{table}[H]
 \centering
@@ -26,10 +28,11 @@ Across genders, the largest effect sizes appear for outcomes in IQ, achievement,
 \input{output/abccare-category-stdtes-rs}
 \begin{tablenotes}
 \footnotesize
-\item Note: This table is constructed by calculating the standardized treatment effect for each variable similar to \citet{Katz_Kling_etal_2001_QJE}. Within outcome categories, we average these standardized treatment effects to produce the the average effect size. We test the distribution of the effect sizes within each outcome category using a Wilcoxon rank sum test. The number of outcomes in each category is reported in the second column. 
+\item Note: This table is constructed by calculating the standardized treatment effect for each variable similar to \citet{Katz_Kling_etal_2001_QJE,Finkelstein_etal_2012_Oregon_QJE}. Within outcome categories, we average these standardized treatment effects to produce the the average effect size. We test the distribution of the effect sizes within each outcome category using a Wilcoxon rank sum test. The number of outcomes in each category is reported in the second column. 
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
+
 
 This paper unfolds in the following way. Section~\ref{sec:data} describes the experimental data we analyze and its special features. It documents the quality level of the alternative childcare that a considerable proportion of the control-group subjects attended. Section~\ref{sec:parameters} defines the treatment effects we estimate and how we summarize them. Section~\ref{sec:treatment-effects} reports the treatment effects overall and by gender and establishes the existence of sharp gender differences for many categories of outcomes. Section~\ref{sec:gender-differences} discusses the sources of these differences. Section~\ref{sec:conclusion} concludes.
 
