--- a/sections/4_treatment-effects.tex
+++ b/sections/4_treatment-effects.tex
@@ -1,10 +1,10 @@
-This section reports estimates of treatment effects by gender for the main outcomes, tests of equality of effects by gender by outcome, and combining functions. These estimates show that the program treatment effects are strong for both males and females. Treatment effects depend on the counterfactual against which they are benchmarked (home or low-quality center childcare). Treatment effects differ sharply by gender.\footnote{See Appendix~\ref{appendix:bootstrap} for the exact procedure we use to conduct inference.}
+This section reports estimates of treatment effects by gender for the main outcomes, tests of equality of effects by gender, and combining functions. These estimates show that although the program treatment effects are strong for both males and females, the effects differ by gender.\footnote{See Appendix~\ref{appendix:bootstrap} for the exact procedure we use to conduct inference.} Treatment effects depend on the counterfactual against which they are benchmarked (home or low-quality center childcare).
 
 \subsection{Estimated Treatment Effects}
 
-Tables~\ref{table:tescombinedmales} and \ref{table:tescombinedfemales} present estimates and bootstrapped $p$-values of a representative selection of treatment effects for males and females respectively. The full list of treatment effects is reported in Appendix~\ref{appendix:results}. Column (1) of each table gives sample mean differences in outcomes between treatment and control groups. Column (2) adjusts the differences for attrition using IPW and controls for background variables. Both are estimates of the parameter defined in equation~\eqref{eq:effect}, but with different conditioning sets. Column (3) shows the mean difference between the full treatment-group and the control-group subjects who stay at home. Column (4) gives matching estimates for the parameter defined in equation~\eqref{eq:influenza}.\footnote{In Appendix~\ref{app:matching-is-fun}, we provide details on: (i) the kernel matching estimator that we use; (ii) the matching variables that we use; and (iii) a sensitivity analysis to these matching variables.} Column (5) reports estimates of the parameter defined by equation~\eqref{eq:smallpox}: mean differences between the treatment-group and control-group children who attended alternatives. Column (6) gives matching estimates for the parameter of equation~\eqref{eq:smallpox}.\footnote{We want to clarify one set of variables: those related to parental income. There are some considerations that contribute to the higher parental income at the later ages. One consideration is that the variables are asked differently, with the question at age 3.5 using categories. These categories end at greater than \$14,000, which truncates the distribution. Although we fill this out using a tobit model, we cannot fully impute these higher incomes. The other consideration is that the mothers are very young, with many being enrolled in school at the child's birth. Once the children are 8, more mothers have entered the workforce which in turn increases the reported income.}
+Tables~\ref{table:tescombinedmales} and \ref{table:tescombinedfemales} present estimates and bootstrapped $p$-values of a representative selection of treatment effects for males and females respectively. These treatment effects are important inputs for the cost-benefit analysis in \citet{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}. The full list of treatment effects is reported in Appendix~\ref{appendix:results}. Column (1) of each table gives sample mean differences in outcomes between treatment and control groups. Column (2) adjusts the differences for attrition using Inverse Probability Weighting (IPW; \citealp{Huber_2012_IdentifyingCausalMechanisms,Seaman_White_2013_SMMR}) and controls for background variables.\footnote{See Appendix~\ref{appendix:methodology} for details on our approach to accounting for attrition and missing data.} Both are estimates of the parameter defined in equation~\eqref{eq:effect}, but with different conditioning sets. Column (3) shows the mean difference between the full treatment-group and the control-group subjects who stay at home. Column (4) gives matching estimates for the parameter defined in equation~\eqref{eq:influenza}.\footnote{In Appendix~\ref{app:matching-is-fun}, we provide details on: (i) the kernel matching estimator that we use; (ii) the matching variables that we use; and (iii) a sensitivity analysis to these matching variables.} Column (5) reports estimates of the parameter defined by equation~\eqref{eq:smallpox}: mean differences between the treatment-group and control-group children who attended alternatives. Column (6) gives matching estimates for the parameter of equation~\eqref{eq:smallpox}.\footnote{We want to clarify one set of variables: those related to parental income. There are some considerations that contribute to the higher parental income at the later ages. One consideration is that the variables are asked differently, with the question at age 3.5 using categories. These categories end at greater than \$14,000, which truncates the distribution. Although we fill this out using a tobit model, we cannot fully impute these higher incomes. The other consideration is that the mothers are very young, with many being enrolled in school at the child's birth. Once the children are 8, more mothers have entered the workforce which in turn increases the reported income.} Resting on the assumptions of matching on observables, comparisons between Columns (4) and (6) allow for comparison between the effect of ABC/CARE relative to the different counterfactual outcomes.\footnote{Due to the small sample size, we use the convention of inference at the 10\% level.}  
 
-The results for females show that ABC/CARE has substantial effects on education when comparing outcomes of the treatment-group subjects to those from the next best alternative. High school graduation increases between 13 and 25 percentage points, depending on which estimate we consider; high school graduation increases 13 percentage points; and the average years of schooling increase between 1.8 and 2.1 years. Employment at age 30 increases between 8 and 13 percentage points. ABC/CARE has substantial impacts on human capital accumulation and employment. The results strengthen when we compare treatment outcomes with outcomes for those who remain at home.\footnote{Due to the small sample size, we use the convention of inference at the 10\% level.}
+The results for females show that ABC/CARE has substantial effects on education when comparing outcomes of the treatment-group subjects to those from the next best alternative. High school graduation increases between 13 and 25 percentage points, depending on which estimate we consider and the average years of schooling increase between 1.8 and 2.1 years. Employment at age 30 increases between 8 and 13 percentage points. The treatment effects on years of education and labor income (compared to the group who stayed at home) are quite large in relation to the control-group mean. These effects are consistent with one another and reflect that, especially compared to the group who stayed at home, ABC/CARE has substantial impacts on human capital accumulation and employment. 
 
 \begin{sidewaystable}[!htbp]
 \centering
@@ -37,9 +37,13 @@ $^*$For females, we do not report graduation from a four-years college because w
 \end{sidewaystable}
 \doublespacing
 
-The results for males are different from those for females. Treatment has substantial effects when compared to the next best alternative. The effects are positive for a variety of health indicators, including drug use and hypertension. The effects on employment and labor income are sizable. The increase in employment at age 30 ranges from 11 to 19 percentage points. Labor income at age 30 increases between \$19,000 and \$24,000 (2014) after treatment. The effects strengthen when comparing treatment to low-quality childcare. Separation from the mother and being placed in relatively low-quality childcare centers has more deleterious consequences for males than for females.\footnote{This is consistent with the evidence in \citet{Kottelenberg_Lehrer_2014_Gender-Effects} and \citet{Baker_Gruber_Milligan_2015_Noncog_Defects} and the analysis of \citet{Golding_Fitzgerald_2017_IMHJ}.}
+The results for males are different from those for females. Treatment has substantial effects when compared to the next best alternative. The effects are positive for a variety of health indicators, including drug use and hypertension. The effects on drug use are particularly large across comparisons to different groups. This is consistent with previous health findings reported in \citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments}. The effects on employment and labor income are sizable. The increase in employment at age 30 ranges from 11 to 19 percentage points. Labor income at age 30 increases between \$19,000 and \$24,000 (2014) after treatment. The effects strengthen when comparing treatment to low-quality childcare. Separation from the mother and being placed in relatively low-quality childcare centers has more deleterious consequences for males than for females.\footnote{This is consistent with the evidence in \citet{Kottelenberg_Lehrer_2014_Gender-Effects}, \citet{Baker_Gruber_Milligan_2015_Noncog_Defects}, and \citet{Golding_Fitzgerald_2017_IMHJ}.}
 
-The results hold when using other definitions of control substitution, which vary by exposure length. They remain statistically significant or are borderline statistically insignificant when computing two-tailed $p$-values (see Appendix~\ref{app:vsensitivity-twosided}). When using step-down $p$-values (see Appendix~\ref{appendix:results} for the full set of step-down $p$-values), the health results remain statistically significant for males, when compared to the full control group and when compared to alternative center childcare. The education results remain statistically significant for females, when compared to the full control group and when compared to those who stay at home.
+The effect on parental income stands out for both genders, with effects at age 12 being especially significant.\footnote{If the parents are not working, parental income is coded as 0.} At earlier ages, the mothers may still be in school given that the average mother was very young. At age 15, only the ABC subjects are observed, reducing the power of the estimates. For male subjects, the treatment effect compared to those who attended is smaller and not significant. The effect compared to those who stayed at home is logically larger and significant. This does not continue through age 21, however. The effect compared to those who attended alternative care is significant at age 21, hinting that even modest effects earlier in life can propagate throughout the income trajectories of the mothers. For female subjects, the treatment effects compared those who attended alternative preschool at age 12 are significant. This, along with some of the mens' results, reflects that even though alternative center-based care allowed the parents to work, the coverage was not as much as ABC/CARE. This could have limited the number of hours or the types of jobs.\footnote{In Appendix~\ref{appendix:results}, we show the effects on mother's employment. Table~\ref{table:abccare_rslt_female_cat4} shows that the effect on females is large across ages compared to those who stayed at home. This is also seen for males (Table~\ref{table:abccare_rslt_male_cat4}), although the effect on males does not resist adjustments for multiple hypothesis testing (Table~\ref{table:abccare_rslt_male_cat4_sd}). The female results are robust (Table~\ref{table:abccare_rslt_female_cat4_sd}). This goes against the findings of \citet{Havnes_Mogstad_2011_JPE}, which find that subsidized child care does not increase maternal labor supply, but is consistent with several other studies finding an increase in maternal labor supply as a result of subsidized child care \citep{bauernschuster2015public,bettendorf2015childcare,geyer2015effects,brilli2016does}.}
+
+Tables~\ref{table:tescombinedmales} and~\ref{table:tescombinedfemales} report average treatment effects that do not directly reveal details on the extreme values in the sample. For certain variables, such as income variables, a larger average treatment effect hints at some large outliers. In \citet{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}, the authors analyze the extreme values of the sample more completely. This is because their methodology relies on individually tabulating the costs and benefits and then computing the treatment effect, resulting in a detailed understanding of the extreme values. 
+
+The treatment effects hold when using other definitions of control substitution, which vary by exposure length. They remain statistically significant or are borderline statistically insignificant when computing two-tailed $p$-values (see Appendix~\ref{app:vsensitivity-twosided}). When using step-down $p$-values (see Appendix~\ref{appendix:results} for the full set of step-down $p$-values), the health results remain statistically significant for males, when compared to the full control group and when compared to alternative center childcare. The education results remain statistically significant for females, when compared to the full control group and when compared to those who stay at home.
 
 The estimated effects for females and males in Columns (3) and (5) in their respective tables are not based on adjustments for baseline covariates (matching); the estimates in (4) and (6) are. In Appendix~\ref{appendix:bvariables}, we justify our choice of matching variables. We conduct a thorough analysis to conclude that there is little sensitivity to the choice of these variables.\footnote{We also present this sensitivity analysis changing the variables used to condition while estimating treatment effects and changing the variables used to construct the weights to account for attrition.}
 
@@ -61,11 +65,9 @@ Note: This table reproduces the control-group means and estimated treatment effe
 
 \subsection{Estimated Combining Functions}
 
-We consider a total of 126 outcomes reported in Appendix~\ref{appendix:gdiff-tes}. Measures of cognitive, social-emotional, and parenting skills were collected during the intervention or while the subjects were in school. The researchers collected information on the subjects' academic performance including grade retention and special education. The adult surveys (at ages 21 and 30) cover items related to employment, post-secondary education, health, criminal activity, and family structure. When the subjects were in their mid 30s, the researchers collected administrative crime data and data from a full medical survey.
+We consider a total of 126 outcomes reported in Appendix~\ref{appendix:gdiff-tes}. Given the large number of outcomes measured in the numerous follow-ups, reporting all treatment effects would overwhelm the reader. A companion paper, \citet{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}, aggregates treatment effects by monetizing benefits and constructing lifetime profiles of outcomes to conduct cost/benefit and rate of return analyses. The monetary benefits from ABC/CARE are largely driven by its effects on males. The mean benefit/cost ratio is 10.19 for males and 2.61 for females with a range of estimates all bounded above 1.
 
-Given the large number of outcomes measured in the numerous follow-ups, reporting all treatment effects would overwhelm the reader. A companion paper, \citet{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}, aggregates treatment effects by monetizing benefits and constructing lifetime profiles of outcomes to conduct cost/benefit and rate of return analyses. The monetary benefits from ABC/CARE are largely driven by its effects on males. The mean benefit/cost ratio is 10.19 for males and 2.61 for females with a range of estimates all bounded above 1.
-
-In this section, we report treatment effects by category and the proportion of statistically significant effects. We use combining functions, which count the number of positive (and significant) treatment effects by gender. We adjust for dependence across outcomes and for pretesting in constructing standard errors (see Appendix~\ref{appendix:methodology}). The combining functions indicate that females benefit in a larger number of outcomes   than do males, in the sense that there are more outcomes across multiple domains for which female treatments benefit relative to female controls. However, as shown in \cite{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}, when monetizing these treatment effects, the program provides a greater social, monetary benefit for boys in part because it reduces costly criminal activity. This pair of conclusions indicates that the outcomes for which women are positively affected relative to men may be harder to monetize.  
+In this section, we report treatment effects by category and the proportion of statistically significant effects. We use combining functions, which count the number of positive (and significant) treatment effects by gender. We adjust for dependence across outcomes and for pretesting in constructing standard errors (see Appendix~\ref{appendix:methodology}). The combining functions indicate that females benefit in a larger number of outcomes   than do males, in the sense that there are more outcomes across multiple domains for which female treatments benefit relative to female controls. However, as shown in \cite{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}, when monetizing these treatment effects, the program provides a greater social, monetary benefit for boys in part because it reduces costly criminal activity. This pair of conclusions indicates that the outcomes for which women are positively affected relative to men are less socially costly or may be harder to monetize.  
 
 We find strong evidence of gender differences in education and employment. For females in comparison to alternative childcare, 40\% of the education outcomes and 20\% of the employment outcomes are positive and significant. These increase to 80\% and 100\% when compared to staying at home. The treatment advantage for males is only seen when compared to those males who attended alternative childcare centers. None of the education or employment outcomes are statistically significant and positive when compared to staying at home.
 
@@ -102,7 +104,7 @@ Figures~\ref{fig:ppositivehome} and~\ref{fig:ppositivealternative} adjust the co
 Note: Panel (a) displays the percentage of outcomes displaying a positive treatment effect, comparing treatment to the next best option. Panel (b) displays the percentage of outcomes displaying a positive and statistically significant treatment effect (10\% significance level). Panel (c) displays the percentage of outcomes with a positive treatment effect, comparing treatment to staying at home. Panel (d) displays the percentage of outcomes with a positive treatment effect, comparing treatment to alternative childcare arrangements. Standard errors are based on the empirical bootstrap distribution. For Panel (b) we perform a ``double bootstrap'' procedure to first determine significant treatment effects at $10\%$ level and then calculate the standard error of the count.\\
 \end{sidewaysfigure}
 
-We also present estimates of the combining functions by outcome category. Figure~\ref{fig:cats-positive-significant} shows the estimated proportions that are statistically significantly positive at the 10\% level. Consistent with the treatment effects above, control-group females tend to do better in alternative childcare than at home. This is especially true for parental income (induced by the childcare benefits of the program), IQ, education, and employment. Control-group males, on the other hand, do better at home, with more positive treatment effects compared to low-quality childcare.
+We also present estimates of the combining functions by outcome category. Figure~\ref{fig:cats-positive-significant} shows the estimated proportions that are statistically significant and positive at the 10\% level. Consistent with the treatment effects above, control-group females tend to do better in alternative childcare than at home. This is especially true for parental income (induced by the childcare benefits of the program), IQ, education, and employment. Control-group males, on the other hand, do better at home, with more positive treatment effects compared to low-quality childcare.
 
 \begin{figure}[H]
 \centering
